--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,3 +24,5 @@
 @import "partials/social-projects.scss";
 @import "partials/faq.scss";
 @import "partials/sostav.scss";
+
+@import "partials/how-to-help.scss";
