--- a/src/views/how_to_help.pug
+++ b/src/views/how_to_help.pug
@@ -13,4 +13,183 @@ block content
 			li.breadcrumbs__item 
 				.breadcrumbs__link  Как помочь
 
-	.simple-pre-footer
+
+
+	section.sectionh-hth-top
+		.container
+			h1.hth-title.h2.tac Как помочь
+			.hth-top__desc Найдите для себя подходящий пример благотворительности или выступите с собственной инициативой на благо общества.<br> Осуществляя пожертвование любым из способов, вы принимаете   
+				a(href="")  условия оферты
+			.simple-tabs.ttu
+				.simple-tabs__tab.simple-tabs__tab--active.js-simple-tab-control(data-target="hth-tab-1") Помощь деньгами
+				.simple-tabs__tab.js-simple-tab-control(data-target="hth-tab-2") Помощь вещами
+				.simple-tabs__tab.js-simple-tab-control(data-target="hth-tab-3") Установить ящик
+				.simple-tabs__tab.js-simple-tab-control(data-target="hth-tab-4") Стать волонтером
+
+		.soc-proj-top-text-section
+			.tabs-content
+				.tabs-content__tab.tabs-content__tab--active.js-simple-tab-target(data-id="hth-tab-1" style="display:block;")
+
+					section.section-text-on-bg.section-text-on-bg--hth(style="background-image:url(img/clouds.jpg);")
+						.container
+							h2.hth-white-title Милосердие — это добрые дела,<br>  которое мы делаем вместе с Вами!
+							.sub-container-667
+								.hth-lhtabs-controls
+									.hth-lhtabs-controls__control.hth-lhtabs-controls__control--active.js-lhtabs-control(data-target="lhtab-1") 
+										span Ю-касса
+									.hth-lhtabs-controls__control.js-lhtabs-control(data-target="lhtab-2") 
+										span Через банк
+									
+								.hth-lhtabs-content
+									.hth-lhtabs-content__tab.hth-lhtabs-content__tab--active.js-hth-lhtab-target(data-id="lhtab-1"  style="display:block;")
+										.hth-lhtabs-content__tab__inner
+											.youcassa-form
+												.youcassa-form__inner 
+													.youcassa-form__logo 
+														img(src="img/yk-logo.png", alt="")
+													.youcassa-form__inps 
+														.s-field-wrap
+															.s-field-wrap__label О покупателе
+															input.simple-inp(type="text" placeholder="ФИО")
+
+														.s-field-wrap
+															.s-field-wrap__label Размер пожертвования (руб.)
+															.simple-radios
+																.simple-radios-item 
+																	input(type="radio", name="size_in_rub" value="100")
+																	.simple-radios-item__name 100
+																	.simple-radios-item__state 
+																.simple-radios-item 
+																	input(type="radio", name="size_in_rub" value="300")
+																	.simple-radios-item__name 300
+																	.simple-radios-item__state 
+																.simple-radios-item 
+																	input(type="radio", name="size_in_rub" value="500")
+																	.simple-radios-item__name 500
+																	.simple-radios-item__state 
+																.simple-radios-item 
+																	input(type="radio", name="size_in_rub" value="1000")
+																	.simple-radios-item__name 1000
+																	.simple-radios-item__state 
+																.simple-radios-item 
+																	input(type="radio", name="size_in_rub" value="2000")
+																	.simple-radios-item__name 2000
+																	.simple-radios-item__state 
+																.simple-radios-item 
+																	input(type="radio", name="size_in_rub" value="other")
+																	.simple-radios-item__name Другая
+																	.simple-radios-item__state 
+
+														.s-field-wrap
+															.s-field-wrap__label Другая сумма
+															input.simple-inp(type="text" placeholder="Сумма платежа *")
+
+														.ycassa-submit-wrap
+															button.ycassa-submit(type="submit")  Внести пожертвование
+
+
+									.hth-lhtabs-content__tab.js-hth-lhtab-target(data-id="lhtab-2")
+										.hth-lhtabs-content__tab__inner
+											.hth-bank-info
+												.hth-bank-info__title  БЕЗНАЛИЧНОЕ ПЕРЕЧИСЛЕНИЕ НА СЧЕТА АНО СОБСПЗГ "МИЛОСЕРДИЕ-НА-ДОНУ"
+												.hth-bank-info__logo 
+													img(src="img/bank-logo.jpg", alt="")
+												.hth-bank-info__text 
+													| Полное наименование организации
+													<br>
+													| Автономная некоммерческая организация социального обслуживания, благотворительной и социальной поддержки и защиты граждан «Милосердие-на-Дону»
+													<br>
+													<br>
+													| Краткое наименование организации
+													<br>
+													| АНО СОБСПЗГ «Милосердие-на-Дону»
+													<br>
+													<br>
+													| ИНН
+													<br>
+													| 6161084789
+													<br>
+													<br>
+													| КПП
+													<br>
+													| 616101001
+													<br>
+													<br>
+													| Расчетный счет
+													<br>
+													| 40703810802700000216
+													<br>
+													<br>
+													| Банк
+													<br>
+													| ПАО КБ "ЦЕНТР-ИНВЕСТ"
+													<br>
+													<br>
+													| Корреспондентский счет
+													<br>
+													| 30101810100000000762
+													<br>
+													<br>
+													| БИК
+													<br>
+													| 046015762
+													<br>
+													<br>
+													| Назначение платежа
+													<br>
+													| Добровольное благотворительное пожертвование на уставную деятельность
+												.hth-bank-info__accept 
+													.radio-wrap 
+														label.radio
+															input(type="checkbox" checked).inp
+															.radio__pseudo
+															.radio__name Соглашаюсь с  
+																a(href="")  офертой
+
+				.tabs-content__tab.js-simple-tab-target(data-id="hth-tab-2")
+					section.section-text-on-bg.section-text-on-bg--hth(style="background-image:url(img/clouds.jpg);")
+						.container
+							h2.hth-white-title Милосердие — это добрые дела,<br>  которое мы делаем вместе с Вами!
+							.hth-white-hr
+							.hth-white-desc Мы принимаем новые и бывшие в употреблении в хорошем состоянии вещи.
+
+							.hth-white-text-block
+								.hth-blue-border-block
+									p Вы можете передать их нам в офис, расположенный по адресу: <br> 
+										span(style="color: #006CAA;")  г. Ростов-на-Дону, ул. Королева 7/19, 5 этаж, офис 602
+										br
+										|  с понедельника по пятницу с 10:00 – 17:00
+									hr
+									p  или связаться с нами по телефону: 
+										a(href="") +7 (908) 500-96-97
+
+								.hth-simple-text.simple-text.simple-text-tiltes
+									h2 НЕОБХОДИМЫЕ ВЕЩИ
+									h3 ДЛЯ МАЛОМОБИЛЬНЫХ И ЛЕЖАЧИХ ГРАЖДАН
+									p Подгузники для взрослых (преимущественно 2,3 размеры), средство личной гигиены, бытовая химия, противопролежневые наборы, одноразовые пеленки, подушки среднего размера, постельные принадлежности, стиральные машинки, горячее питание
+									h3 ДЛЯ МАЛОИМУЩИХ СЕМЕЙ И ЛИЦ, ПОПАВШИХ В ТРУДНУЮ ЖИЗНЕННУЮ СИТУАЦИЮ
+									p Одежда и обувь взрослая и детская как новая, так и бывшая в употреблении, не требующая ремонта и стирки, средства гигиены для взрослых и детей, продукты питания первой необходимости: макароны, крупы, консервные продукты, подсолнечное масло и т.п., школьные принадлежности, памперсы детские любых размеров
+									h3 ДЛЯ ПУНКТА ПРОКАТА РЕАБИЛИТАЦИОННЫХ ТЕХНИЧЕСКИХ СРЕДСТВ
+									p Костыли и трости (в том числе тактильные), инвалидные коляски взрослые и детские, медицинские кровати, противопролежневые матрасы, прикроватные стулья-унитазы, опоры-ходунки, прогулочные ходунки-ролляторы, валики, танометры, тифлорадиоприемники, говорящие термометры, глюкометры и танометры (для лиц с нарушением функции зрения), слуховые тренажеры, насадки на унитаз (после обработки), очки, коррегирующие зрение, Max-Detail и прочее
+
+
+				.tabs-content__tab.js-simple-tab-target(data-id="hth-tab-3")
+					section.section-text-on-bg.section-text-on-bg--hth(style="background-image:url(img/clouds.jpg);")
+						.container
+							h2.hth-white-title Милосердие — это добрые дела,<br>  которое мы делаем вместе с Вами!
+
+							.hth-white-text-block
+								.hth-blue-border-block
+									p Если Вы хотите установить у себя ящик для сбора пожертвований или изготовить ящик на благотворительной основе, свяжитесь с нами по телефону  
+										a(href="") +7 (908) 500-96-97
+
+								.hth-simple-quote
+									p «Человек пришел на землю, дабы нести людям любовь, хранить верность, оберегать свои семьи, помогать ближним. Это – великая миссия», преп. Паисий
+
+
+				.tabs-content__tab.js-simple-tab-target(data-id="hth-tab-4")
+					section.section-text-on-bg.section-text-on-bg--hth(style="background-image:url(img/clouds.jpg);")
+						.container
+							h2.hth-white-title В силу некоторых особенностей форма будет стилизована по месту при реализации бэкенда
+
+
